--- a/style.css
+++ b/style.css
@@ -65,6 +65,52 @@ svg{
   height: 100%;
 }
 
+.small-button {
+  padding: 9px 36px;
+  color: #fff;
+  border-radius: 13px;
+  font-weight: 600;
+  font-size: 1rem;
+  cursor: pointer
+}
+
+.orange-hover {
+  background-color: #ff923e;
+  background-image: radial-gradient(circle at center,#ff9b4f 50%,transparent 50%);
+  background-repeat: no-repeat;
+  transition: background-size .3s;
+  background-size: 0 0;
+  background-position: 50% 50%
+}
+
+.orange-hover:hover {
+  background-size: 200% 200%
+}
+
+.gray-hover {
+  background-color: #b9bbbe;
+  background-image: radial-gradient(circle at center,#caccce 50%,transparent 50%);
+  background-repeat: no-repeat;
+  transition: background-size .3s;
+  background-size: 0 0;
+  background-position: 50% 50%
+}
+
+.gray-hover:hover {
+  background-size: 200% 200%
+}
+
+.social-icon {
+  cursor: pointer;
+  filter: grayscale(1) brightness(8);
+  transition: .125s ease-in
+}
+
+.social-icon:hover {
+  filter: unset;
+  transform: scale(1.05)
+}
+
 .hidden{
   display: none;
 }
@@ -240,7 +286,7 @@ svg{
 .section{
   position: relative;
   width: 50%;
-  padding: 1000px 4%;
+  padding: 150px 4% 500px;
   margin: 0;
   background-color: var(--color-background);
   overflow: hidden;
@@ -248,13 +294,13 @@ svg{
 
 .left{
   margin-right: auto;
-  border-top-right-radius: 700px 700px;
+  border-top-right-radius: 500px 500px;
   border-bottom-right-radius: 0px 0px;
 }
 
 .right{
   margin-left: auto;
-  border-top-left-radius: 700px 700px;
+  border-top-left-radius: 500px 500px;
   border-bottom-left-radius: 0px 0px;
 }
 
@@ -289,25 +335,25 @@ svg{
 
 .section-intro-wrapper{
   position: relative;
-  padding: 20% 5%;
-  border-bottom: 2px solid var(--color-pink);
-  padding-bottom: 400px;
+  padding: 20% 2%;
+  border-bottom: 3px solid var(--color-pink);
+  padding-bottom: 10px;
 }
 
 .section-intro-wrapper:nth-child(3){
-  border-bottom: 2px solid var(--color-green);
+  border-bottom: 3px solid var(--color-green);
 }
 
 .section-detail-wrapper{
   position: relative;
-  padding: 20% 5%;
+  padding: 5% 5%;
 }
 
 .section-heading{
   font-size: 18px;
   font-weight: 700;
   line-height: 1.8;
-  margin-top: 64px;
+  margin-top: 30px;
   color: var(--color-text);
 }
 
@@ -329,9 +375,9 @@ svg{
   font-size: 40px;
   font-weight: 500;
   transform-origin: left;
-  transform: skewY(25deg);
-  z-index: 5;
-  text-transform: uppercase;
+  /*transform: skewY(25deg);*/
+  /*z-index: 5;*/
+  /*text-transform: uppercase;*/
   color: var(--color-pink);
 }
 
@@ -365,7 +411,7 @@ svg{
 .section-number{
   position: absolute;
   bottom: 15px;
-  right: 0;
+  right: 10px;
   color: var(--color-pink);
   font-size: 24px;
 }
@@ -443,6 +489,199 @@ svg{
   background-color: var(--color-green);
 }
 
+#contact-section {
+  align-items: flex-start;
+  justify-content: center;
+  min-height: 100vh;
+  padding: 80px 0;
+  box-sizing: border-box
+}
+
+#contact-container {
+  margin-top: 40px;
+  padding: 10px;
+  border-radius: 20px;
+  background: white;
+  width: 540px;
+  max-width: 45%;
+  height: 560px;
+  max-height: 90vh;
+  box-sizing: border-box
+}
+
+#contact-container input,textarea {
+  border: none;
+  font-size: 1.1rem;
+  font-family: Poppins,sans-serif;
+  background: transparent!important;
+  font-weight: 500;
+  color: #111029;
+  resize: none
+}
+
+#contact-container input:focus,textarea:focus {
+  outline: none;
+  border: none
+}
+
+#contact-message-input {
+  flex: 1
+}
+
+#contact-container textarea,.contact-container {
+  height: 100%
+}
+
+.input-container {
+  width: 100%;
+  box-sizing: border-box;
+  background: #F5F5F5;
+  color: #acacac;
+  border-radius: 13px;
+  padding: 7px 7px 7px 15px;
+  border: 2px solid #F5F5F5
+}
+
+.input-container:focus-within {
+  border: 2px solid #c7c7c7
+}
+
+.input-container label,.input-container span {
+  font-size: .8rem;
+  font-weight: 500;
+  margin-right: 10px
+}
+
+#contact-name-input,#contact-email-input {
+  margin-bottom: 20px
+}
+
+#contact-button-container {
+  margin-top: 20px;
+  display: flex;
+  align-items: center
+}
+
+#contact-button-container .small-button {
+  margin-left: auto;
+  font-size: 1rem
+}
+
+#contact-button-container .social-icon {
+  margin: 0 8px
+}
+
+.error-label {
+  color: #d85454
+}
+
+.error-container {
+  background: #ffdbdb;
+  border-color: #f0caca
+}
+
+#contact-result-message-container {
+  margin-bottom: auto
+}
+
+#contact-result-message-container h4 {
+  text-align: center;
+  margin: 3px
+}
+
+#contact-result-message-container span {
+  font-size: 1rem;
+  text-align: center;
+  margin: 3px
+}
+
+#contact-result-container svg {
+  margin-top: auto;
+  margin-bottom: 50px;
+  height: 90px;
+  min-height: 90px
+}
+
+#contact-result-container polyline,line {
+  fill: none;
+  stroke-width: 15
+}
+
+#contact-result-button {
+  font-size: 1rem
+}
+
+@media (max-aspect-ratio: 12/10) {
+  #contact-section {
+    margin-top:10vh;
+    align-items: center;
+    justify-content: flex-start;
+    height: fit-content;
+    margin-bottom: 80vh;
+    padding: 0;
+    min-height: unset
+  }
+
+  #contact-header-container {
+    width: 580px;
+    max-width: 100%
+  }
+
+  #contact-container {
+    max-width: 100%;
+    width: 580px
+  }
+}
+
+@media (max-width: 360px),(max-width: 800px) and (min-aspect-ratio: 12/10) {
+  #contact-button-container .social-icon {
+    margin:0 4px;
+    width: 24px;
+    height: 24px
+  }
+}
+
+@media (max-width: 360px),(max-width: 700px) and (min-aspect-ratio: 12/10) {
+  #contact-button-container .social-icon {
+    display:none
+  }
+}
+
+#hover-icon {
+  position: absolute;
+  border-radius: 50%;
+  border-style: solid;
+  top: 0;
+  left: 0;
+  z-index: 999;
+  transform: translate(-50%,-50%) scale(0);
+  pointer-events: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: height .2s,width .2s,border-color .2s,border-width .2s;
+  opacity: 0
+}
+
+.clickCTA:after {
+  content: "Click to enable\asounds.";
+  line-height: 17px;
+  white-space: pre-wrap;
+  text-align: center;
+  min-width: 200px;
+  position: relative;
+  top: 50px;
+  color: #7c8594
+}
+
+.hover-spread {
+  height: 16px;
+  min-width: 16px;
+  background: #FF923E;
+  position: absolute;
+  opacity: .1;
+  border-radius: 50%
+}
 
 /* Media Queries */
 
