--- a/style.css
+++ b/style.css
@@ -350,14 +350,14 @@ svg {
 
 .left {
     margin-right: auto;
-    border-top-right-radius: 500px 500px;
-    border-bottom-right-radius: 0 0;
+    border-top-right-radius: 100px 100px;
+    border-bottom-right-radius: 100px 100px;
 }
 
 .right {
     margin-left: auto;
-    border-top-left-radius: 500px 500px;
-    border-bottom-left-radius: 0 0;
+    border-top-left-radius: 100px 100px;
+    border-bottom-left-radius: 100px 100px;
 }
 
 /* Progress bars */
@@ -447,6 +447,13 @@ svg {
     border: 1px solid var(--color-pink);
     transform-origin: left;
     transform: skewY(-25deg);
+}
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
 }
 
 .styleOne {
