--- a/style.css
+++ b/style.css
@@ -236,7 +236,6 @@ svg {
     width: 100%;
     height: 100vh;
     overflow: hidden;
-    pointer-events: auto;
 }
 
 .page-wrapper {
@@ -688,7 +687,7 @@ svg {
     width: 100%;
     box-sizing: border-box;
     background: var(--color-background);
-    color: #acacac;
+    color: var(--color-text);
     border-radius: 13px;
     padding: 7px 7px 7px 15px;
     border: 2px solid #c7c7c7
